fix chat readability on light backgrounds

--- a/static/style.css
+++ b/static/style.css
@@ -39,6 +39,7 @@ body {
     color: #ffffff;
 	font-family: Stylish;
 	font-size: 20pt;
+	text-shadow: 1px 1px 2px black;
 }
 
 ol, ul {
